--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Countries</string>
+    <string name="country_name_region_format">"%s, %s"</string>
 </resources>
